# pdfium-render

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  fpdfview.h  wrapper.h
.cargo/: config
.github/scripts/: api_coverage_test.sh  wasm_api_compat_test.sh
.github/workflows/: build_test.yml
examples/: Cargo.toml  README.md  annotations.rs  attachments.rs  axum_once_cell.rs  chars.rs  clone.rs  concat.rs  copy_objects.rs  create.rs  create_annotations.rs  custom_font_provider.rs  custom_fonts.rs  descenders.rs  export.rs  export_clip_crop.rs  fill_form_field.rs  font_config.rs  fonts.rs  form.rs  form_fields.rs  image.rs  image_extract.rs  index.html  links.rs  matrix.rs  objects.rs  path.rs  pdfium.js  pdfium.wasm  pdfium_render.js  reader.rs  segments.rs  serve.sh  signatures.rs  text.rs  text_extract.rs  text_search.rs  text_segments.rs  thread_safe.rs  (+4 more)
examples/serve/: index.html  pdfium_render.js  pdfium_render_wasm_example.js  pdfium_render_wasm_example_bg.wasm
include/: rust-import-wrapper.h
include/pdfium_5961/: fpdfview.h  rust-import-wrapper.h
include/pdfium_6015/: rust-import-wrapper.h
include/pdfium_6043/: fpdfview.h  rust-import-wrapper.h
include/pdfium_6084/: rust-import-wrapper.h
include/pdfium_6110/: rust-import-wrapper.h
include/pdfium_6124/: rust-import-wrapper.h
include/pdfium_6164/: rust-import-wrapper.h
include/pdfium_6259/: rust-import-wrapper.h
include/pdfium_6295/: fpdfview.h  rust-import-wrapper.h
include/pdfium_6337/: fpdfview.h  rust-import-wrapper.h
include/pdfium_6406/: rust-import-wrapper.h
include/pdfium_6490/: fpdfview.h  rust-import-wrapper.h
include/pdfium_6555/: rust-import-wrapper.h
include/pdfium_6569/: rust-import-wrapper.h
include/pdfium_6611/: fpdfview.h  rust-import-wrapper.h
include/pdfium_6666/: rust-import-wrapper.h
include/pdfium_6721/: fpdfview.h  rust-import-wrapper.h
include/pdfium_6996/: fpdfview.h  rust-import-wrapper.h
include/pdfium_7123/: rust-import-wrapper.h
include/pdfium_7215/: rust-import-wrapper.h
include/pdfium_7350/: rust-import-wrapper.h
include/pdfium_7543/: rust-import-wrapper.h
include/pdfium_7763/: fpdf_structtree.h  fpdfview.h  rust-import-wrapper.h
include/pdfium_7881/: fpdf_catalog.h  fpdf_edit.h  fpdf_ppo.h  fpdf_save.h  rust-import-wrapper.h
include/pdfium_future/: fpdf_annot.h  fpdf_attachment.h  fpdf_catalog.h  fpdf_dataavail.h  fpdf_doc.h  fpdf_edit.h  fpdf_ext.h  fpdf_flatten.h  fpdf_formfill.h  fpdf_fwlevent.h  fpdf_javascript.h  fpdf_ppo.h  fpdf_progressive.h  fpdf_save.h  fpdf_searchex.h  fpdf_signature.h  fpdf_structtree.h  fpdf_sysfontinfo.h  fpdf_text.h  fpdf_thumbnail.h  fpdf_transformpage.h  fpdfview.h  rust-import-wrapper.h
src/: action.rs  action_destination.rs  action_embedded_destination.rs  action_launch.rs  action_local_destination.rs  action_private.rs  action_remote_destination.rs  action_unsupported.rs  action_uri.rs  annotation.rs  appearance_mode.rs  attachment.rs  attachments.rs  bindgen.rs  bindings.rs  bitmap.rs  bitmap_config.rs  bookmark.rs  bookmarks.rs  clip_path.rs  color.rs  color_space.rs  config.rs  destination.rs  document.rs  error.rs  flatten.rs  font.rs  font_glyph.rs  font_glyphs.rs  font_provider.rs  fonts.rs  form.rs  form_field.rs  form_field_button.rs  form_field_checkbox.rs  form_field_combo.rs  form_field_list.rs  form_field_option.rs  form_field_options.rs  (+73 more)
src/bindgen/: pdfium_5961.rs  pdfium_6015.rs  pdfium_6043.rs  pdfium_6084.rs  pdfium_6110.rs  pdfium_6124.rs  pdfium_6164.rs  pdfium_6259.rs  pdfium_6295.rs  pdfium_6337.rs  pdfium_6406.rs  pdfium_6490.rs  pdfium_6555.rs  pdfium_6569.rs  pdfium_6611.rs  pdfium_6666.rs  pdfium_6721.rs  pdfium_6996.rs  pdfium_7123.rs  pdfium_7215.rs  pdfium_7350.rs  pdfium_7543.rs  pdfium_7763.rs  pdfium_7881.rs  pdfium_future.rs
src/bindings/: dynamic.rs  dynamic_bindings.rs  static_bindings.rs  thread_safe.rs  version.rs  wasm.rs  wasm_bindings.rs
src/pdf/: action.rs  appearance_mode.rs  bitmap.rs  color.rs  color_space.rs  destination.rs  document.rs  font.rs  link.rs  matrix.rs  path.rs  points.rs  quad_points.rs  rect.rs  transform.rs
src/pdf/action/: embedded_destination.rs  launch.rs  local_destination.rs  private.rs  remote_destination.rs  unsupported.rs  uri.rs
src/pdf/document/: attachment.rs  attachments.rs  bookmark.rs  bookmarks.rs  catalog.rs  fonts.rs  form.rs  metadata.rs  page.rs  pages.rs  permissions.rs  signature.rs  signatures.rs
src/pdf/document/page/: annotation.rs  annotations.rs  boundaries.rs  field.rs  flatten.rs  index_cache.rs  links.rs  object.rs  objects.rs  paragraph.rs  render_config.rs  size.rs  structure_tree.rs  text.rs
src/pdf/document/page/annotation/: attachment_points.rs  circle.rs  free_text.rs  highlight.rs  ink.rs  link.rs  objects.rs  popup.rs  private.rs  redacted.rs  square.rs  squiggly.rs  stamp.rs  strikeout.rs  text.rs  underline.rs  unsupported.rs  variable_text.rs  widget.rs  xfa_widget.rs
src/pdf/document/page/field/: button.rs  checkbox.rs  combo.rs  list.rs  option.rs  options.rs  private.rs  radio.rs  signature.rs  text.rs  unknown.rs
src/pdf/document/page/object/: content_mark.rs  group.rs  image.rs  ownership.rs  path.rs  private.rs  shading.rs  text.rs  unsupported.rs  x_object_form.rs
src/pdf/document/page/objects/: common.rs  private.rs
src/pdf/document/page/text/: char.rs  chars.rs  search.rs  segment.rs  segments.rs
src/pdf/font/: glyph.rs  glyphs.rs  provider.rs
src/pdf/path/: clip_path.rs  segment.rs  segments.rs
tests/: ffi_lock_gate.rs  thread_safety_soundness.rs
