[package]
name = "pdfium-render"
version = "0.8.24"
edition = "2018"
publish = true
description = "A high-level idiomatic Rust wrapper around Pdfium, the C++ PDF library used by the Google Chromium project."
readme = "README.md"
homepage = "https://github.com/ajrcarey/pdfium-render"
repository = "https://github.com/ajrcarey/pdfium-render"
license = "MIT OR Apache-2.0"
keywords = ["pdf", "pdfium"]
categories = ["api-bindings", "multimedia::images", "visualization", "wasm"]
authors = ["Alastair Carey <alastair@alastaircarey.com>"]

[lib]
name = "pdfium_render"
crate-type = ["lib", "staticlib", "cdylib"]
doctest = false

[dependencies]
bitflags = "2"
bytes = "1"
bytemuck = "1"
chrono = "0"
image = { version = ">= 0.24.0", optional = true } # DynamicImage trait definitions changed between 0.23.14 and 0.24.0; we use trait from version 0.24.0 and later.
itertools = "0"
log = "0"
maybe-owned = "0"
once_cell = "1"
utf16string = "0"
vecmath = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1"
console_error_panic_hook = "0"
js-sys = "0"
wasm-bindgen = { version = "0", features = ["enable-interning"] }
wasm-bindgen-futures = { version = "0" }
web-sys = { version = "0", features = [
    "TextDecoder",
    "ImageData",
    "Window",
    "Response",
    "Blob",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8.1"

[build-dependencies]
bindgen = { version = "0" }

[dev-dependencies]
# Dependencies specific to examples. Dependencies for the WASM example in examples/wasm.rs
# are specified separately in examples/Cargo.toml.
rand = "0"  # Used by examples/create.rs, examples/matrix.rs
rayon = "1" # Used by examples/thread_safe.rs

[features]
default = [
    "pdfium_latest",
    "thread_safe",
    "image",
] # The image feature is implicit because the image dependency is optional.
bindings = []
static = []
thread_safe = []
"libstdc++" = ["static"]
"libc++" = ["static"]
sync = ["thread_safe"]
paragraph = []
flatten = []

# PdfiumLibraryBindings supports pinning its API definitions to a specific Pdfium release.
# This allows pdfium-render consumers to safely upgrade their pdfium-render dependency without
# having to simultaneously upgrade their Pdfium dependency.

# By default, pdfium-render attempts to bind against the latest released version of the Pdfium API.
# To explicitly bind against an older version, select one of the feature flags below when
# taking `pdfium-render` as a dependency in your project's Cargo.toml.

pdfium_latest = ["pdfium_6611"]
pdfium_future = [
    "bindings",
] # For testing changes in Pdfium source control that are yet to be released
pdfium_6611 = []
pdfium_6569 = []
pdfium_6555 = []
pdfium_6490 = []
pdfium_6406 = []
pdfium_6337 = []
pdfium_6295 = []
pdfium_6259 = []
pdfium_6164 = []
pdfium_6124 = []
pdfium_6110 = []
pdfium_6084 = []
pdfium_6043 = []
pdfium_6015 = []
pdfium_5961 = []
